--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>To The Moon Portfolio Tracker Initiaition Page</h1>
-    <h3>Sign up below and enjoy the volatile ride refelcted by your portfolio</h3>
+    <h3>Sign up below and enjoy the volatile ride reflected by your portfolio</h3>
     <form action="/signup" method="post">
         <div>
             Enter Username: <input type="text" th:field="${user.username}">
