--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,8 +6,6 @@
 </head>
 <body>
 	<form action="" method="post">
-		<input type="hidden" th:name="${_csrf.parameterName}"
-			th:value="${_csrf.value}">
 		<fieldset>
 			<legend>Please Login</legend>
 			<!-- use param.error assuming FormLoginConfigurer#failureUrl contains the query parameter error -->
@@ -40,7 +38,9 @@
 	<div>
 		<p>Are you new here? Click the button below to get started with a
 			free account!</p>
-		<button onclick="window.location.href='/signup'">Sign Up!</button>
+		<a th:href="@{/signup}">
+			<button>Sign Up</button>
+		</a>
 	</div>
 </body>
 </html>
