--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -7,9 +7,8 @@
   
   <p th:text="|Hello there ${user.username}|"></p>
   
-  <form method="post" action="/logout">
-    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-    <button type="submit">Logout</button>
+  <form method="post" th:action="${/logout}">
+    <input type="submit" value="Log Out"/>
   </form>
   
 </html>
