--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -6,8 +6,8 @@
   <h1>Dashboard</h1>
   
   
-  <form method="post" th:action="${/logout}">
+ <!--   <form method="post" th:action="${/logout}">
     <input type="submit" value="Log Out"/>
   </form>
-  
+  -->
 </html>
