--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org">
   <head>
-    <title>Dashboard</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>To The Moon</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   </head>
-  <h1>Dashboard</h1>
-  
-  
- <!--   <form method="post" th:action="${/logout}">
-    <input type="submit" value="Log Out"/>
-  </form>
-  -->
+  <body>
+    <nav class="navbar bg-light">
+        <div class="container">
+          <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" th:href="@{/landingpage}">
+                    <img src="/images/Rocket-logo.png" alt="To The Moon!" width="30" height="24" class="d-inline-block align-text-top">
+                    To The Moon Portfolio Tracker
+                </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" th:href="@{/login}">Log in</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" th:href="@{/signup}">Create An Account</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+        </div>
+      </nav>
+  </body>
 </html>
