implemented new log in display using css tailwind

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -12,7 +12,7 @@
           <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" th:href="@{/landingpage}">
-                    <img src="/images/Rocket-logo.png" alt="To The Moon!" width="30" height="24" class="d-inline-block align-text-top">
+                    <img src="/images/spaceman-logo.png" alt="To The Moon!" width="30" height="24" class="d-inline-block align-text-top">
                     To The Moon Portfolio Tracker
                 </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
