--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,17 +1,64 @@
 <!DOCTYPE html>
-<html xmlns:th=http://thymeleaf.org>
+<html xmlns:th=http://thymeleaf.org class="h-full bg-gray-50">
 <head>
 <meta charset="UTF-8">
 <title>Dashboard</title>
 <link rel="stylesheet" href="/css/log-in.css">
+ <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+    	    plugins: [
+    	      require('@tailwindcss/forms'),
+    	    ],
+    	  }
+  </script>
 </head>
-<body>
-	<form action="" method="post">
-	<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-		<fieldset>
-			<legend>Please Login</legend>
-			<!-- use param.error assuming FormLoginConfigurer#failureUrl contains the query parameter error -->
-			<div th:if="${param.error != null}">
+<body class="h-full">
+<!-- 	<form action="" method="post"> -->
+<!-- 	<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"> -->
+<!-- 		<fieldset> -->
+<!-- 			<legend>Please Login</legend> -->
+<!-- 			<!-- use param.error assuming FormLoginConfigurer#failureUrl contains the query parameter error --> -->
+<!-- 			<div th:if="${param.error != null}"> -->
+<!-- 				<div> -->
+<!-- 					Failed to login. -->
+<!-- 					<div th:if="${SPRING_SECURITY_LAST_EXCEPTION != null}"> -->
+<!-- 						Reason: <span th:text="${SPRING_SECURITY_LAST_EXCEPTION.message}"> -->
+<!-- 						</span> -->
+<!-- 					</div> -->
+<!-- 				</div> -->
+<!-- 			</div> -->
+		
+<!-- 			<p> -->
+<!-- 				<label for="username">Username</label> <input type="text" -->
+<!-- 					id="username" name="username" /> -->
+<!-- 			</p> -->
+<!-- 			<p> -->
+<!-- 				<label for="password">Password</label> <input type="password" -->
+<!-- 					id="password" name="password" /> -->
+<!-- 			</p> -->
+<!-- 			<!-- if using RememberMeConfigurer make sure remember-me matches RememberMeConfigurer#rememberMeParameter --> -->
+<!-- 			<div> -->
+<!-- 				<button type="submit" class="btn">Log in</button> -->
+<!-- 			</div> -->
+<!-- 		</fieldset> -->
+<!-- 	</form> -->
+<!-- 	<div> -->
+<!-- 	</div> -->
+	<div class="min-h-full flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
+  <div class="max-w-md w-full space-y-8">
+    <div>
+      <img class="mx-auto h-12 w-auto" src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg" alt="Workflow">
+      <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">Sign in to your account</h2>
+      <p class="mt-2 text-center text-sm text-gray-600">
+        Or
+        <a th:href="@{/signup}" class="font-medium text-indigo-600 hover:text-indigo-500">Are you new here? Create An Account</a>
+      </p>
+    </div>
+    <form class="mt-8 space-y-6" action="" method="POST">
+    	<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+      <input type="hidden" name="remember" value="true">
+      <div th:if="${param.error != null}">
 				<div>
 					Failed to login.
 					<div th:if="${SPRING_SECURITY_LAST_EXCEPTION != null}">
@@ -20,29 +67,33 @@
 					</div>
 				</div>
 			</div>
-			<!-- the configured LogoutConfigurer#logoutSuccessUrl is /login?logout and contains the query param logout -->
-			<div th:if="${param.logout != null}">You have been logged out.
-			</div>
-			<p>
-				<label for="username">Username</label> <input type="text"
-					id="username" name="username" />
-			</p>
-			<p>
-				<label for="password">Password</label> <input type="password"
-					id="password" name="password" />
-			</p>
-			<!-- if using RememberMeConfigurer make sure remember-me matches RememberMeConfigurer#rememberMeParameter -->
-			<div>
-				<button type="submit" class="btn">Log in</button>
-			</div>
-		</fieldset>
-	</form>
-	<div>
-		<p>Are you new here? Click the button below to get started with a
-			free account!</p>
-		<a th:href="@{/signup}">
-			<button>Sign Up</button>
-		</a>
-	</div>
+      <div class="rounded-md shadow-sm -space-y-px">
+        <div>
+          <label for="username" class="sr-only">Username</label>
+          <input id="username" name="username" type="text" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Email address">
+        </div>
+        <div>
+          <label for="password" class="sr-only">Password</label>
+          <input id="password" name="password" type="password" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Password">
+        </div>
+      </div>
+
+      <div class="flex items-center justify-between">
+      </div>
+
+      <div>
+        <button type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+          <span class="absolute left-0 inset-y-0 flex items-center pl-3">
+            <!-- Heroicon name: solid/lock-closed -->
+            <svg class="h-5 w-5 text-indigo-500 group-hover:text-indigo-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <path fill-rule="evenodd" d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z" clip-rule="evenodd" />
+            </svg>
+          </span>
+          Sign in
+        </button>
+      </div>
+    </form>
+  </div>
+</div>
 </body>
 </html>
