--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -6,7 +6,7 @@
     <title>Sign Up</title>
 </head>
 <body>
-    <h1>To The Moon Portfolio Tracker Initiaition Page</h1>
+    <h1>Sign Up</h1>
     <h3>Sign up below and enjoy the volatile ride reflected by your portfolio</h3>
     <form th:action="@{/signup}" method="post">
         <div>
