--- a/src/main/resources/static/css/landingpage.css
+++ b/src/main/resources/static/css/landingpage.css
@@ -7,4 +7,6 @@
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	align-content: center;
 	justify-content: center;
+	height: 100px;
+	width: 100px;
 }
