--- a/src/main/resources/templates/landing_page.html
+++ b/src/main/resources/templates/landing_page.html
@@ -11,7 +11,7 @@
   <body>
     <nav class="navbar bg-light">
         <div class="container">
-          <nav class="navbar navbar-expand-lg bg-dark">
+          <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" th:href="@{/landingpage}">
      <!--                <img src="https://www.freepnglogos.com/pics/rocket" alt="To The Moon!" width="36" height="24" class="d-inline-block align-text-top">    --> 
@@ -36,7 +36,7 @@
       </nav>
       <div class="banner-container">
       	<div class="banner">
-      	  <img id="cycling-banner" alt="ad banner" src="/images/ad-image-three.jpg">
+      	  <img id="cycling-banner" alt="ad banner" src="/images/ad-image-one.jpg" width="600px" height="600px">
       	</div>
       </div>
   </body>
