--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -47,6 +47,7 @@
 <!-- 	</div> -->
 	<div class="min-h-full flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
   <div class="max-w-md w-full space-y-8">
+  	<!-- sign in or create an account -->
     <div>
       <img class="mx-auto h-36 w-auto" src="/images/ttm-logo.png" alt="Workflow">
       <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">Sign in to your account</h2>
@@ -67,6 +68,7 @@
 					</div>
 				</div>
 			</div>
+			<!-- sign in fields -->
       <div class="rounded-md shadow-sm -space-y-px">
         <div>
           <label for="username" class="sr-only">Username</label>
@@ -80,7 +82,7 @@
 
       <div class="flex items-center justify-between">
       </div>
-
+		<!-- submit button -->
       <div>
         <button type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
           <span class="absolute left-0 inset-y-0 flex items-center pl-3">
