--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
+    <link rel="stylesheet" href="/css/signup.css">
+     <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+    	    plugins: [
+    	      require('@tailwindcss/forms'),
+    	    ],
+    	  }
+  </script>
 </head>
-<body>
-    <h1>Sign Up</h1>
+<body class="h-full">
+<!--     <h1>Sign Up</h1> 
     <h3>Sign up below and enjoy the volatile ride reflected by your portfolio</h3>
     <form th:action="@{/signup}" method="post">
         <div>
@@ -26,5 +35,44 @@
             <input type="submit" value="Create Account">
         </div>
     </form>
+</body>
+</html>
+-->
+<div class="min-h-full flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
+  <div class="max-w-md w-full space-y-8">
+  	<!-- sign in or create an account -->
+    <div>
+      <img class="mx-auto h-36 w-auto" src="/images/ttm-logo.png" alt="Workflow">
+      <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-50">Sign up below and enjoy the volatile ride reflected by your portfolio</h2>
+    </div>
+    <form class="mt-8 space-y-6" th:action="@{/signup}" method="POST">
+    	<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+      <input type="hidden" name="remember" value="true">
+			<!-- sign up fields -->
+      <div class="rounded-md shadow-sm -space-y-px">
+        <div>
+          <label for="username" class="sr-only">Enter Username:</label>
+          <input id="username" name="username" th:type="text" th:field="${user.username}"required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Username">
+        </div>
+        <div>
+          <label for="password" class="sr-only">Password</label>
+          <input id="password" name="password" th:type="password" th:field="${user.password}" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Password">
+        </div>
+      </div>
+		<!-- submit button -->
+      <div>
+        <button type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+          <span class="absolute left-0 inset-y-0 flex items-center pl-3">
+            <!-- Heroicon name: solid/lock-closed -->
+            <svg class="h-5 w-5 text-indigo-500 group-hover:text-indigo-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <path fill-rule="evenodd" d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z" clip-rule="evenodd" />
+            </svg>
+          </span>
+          Sign Up
+        </button>
+      </div>
+    </form>
+  </div>
+</div>
 </body>
 </html>
