--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -4,40 +4,84 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>To The Moon</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="/css/landingpage.css" rel="stylesheet">
     <script src="/js/landingpage.js" type="text/javascript"></script>
   </head>
   <body>
-    <nav class="navbar bg-light">
-        <div class="container">
-          <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" th:href="@{/landingpage}">
-     <!--                <img src="https://www.freepnglogos.com/pics/rocket" alt="To The Moon!" width="36" height="24" class="d-inline-block align-text-top">    --> 
-                    To The Moon Portfolio Tracker
-                </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/login}">Log in</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" th:href="@{/signup}">Create An Account</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-        </div>
-      </nav>
-      <div class="banner-container">
-      	<div class="banner">
-      	  <img id="cycling-banner" alt="ad banner" src="/images/ad-image-one.jpg" width="600px" height="600px">
-      	</div>
-      </div>
+	  <nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-gray-900">
+	  <div class="container flex flex-wrap justify-between items-center mx-auto">
+	  <a th:href="@{/dashboard}" class="flex items-center">
+	      <img src="/docs/images/logo.svg" class="mr-3 h-6 sm:h-9" alt="Flowbite Logo" />
+	      <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
+	  </a>
+	  <div class="flex md:order-2">
+	    <button type="button" data-collapse-toggle="navbar-search" aria-controls="navbar-search" aria-expanded="false" class="md:hidden text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5 mr-1" >
+	      <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path></svg>
+	      <span class="sr-only">Search</span>
+	    </button>
+	    <div class="hidden relative md:block">
+	      <div class="flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none">
+	        <svg class="w-5 h-5 text-gray-500" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path></svg>
+	        <span class="sr-only">Search icon</span>
+	      </div>
+	      <input type="text" id="search-navbar" class="block p-2 pl-10 w-full text-gray-900 bg-gray-50 rounded-lg border border-gray-300 sm:text-sm focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Search...">
+	    </div>
+	    <button data-collapse-toggle="navbar-search" type="button" class="inline-flex items-center p-2 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-search" aria-expanded="false">
+	      <span class="sr-only">Open menu</span>
+	      <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
+	    </button>
+	  </div>
+	    <div class="hidden justify-between items-center w-full md:flex md:w-auto md:order-1" id="navbar-search">
+	      <div class="relative mt-3 md:hidden">
+	        <div class="flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none">
+	          <svg class="w-5 h-5 text-gray-500" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path></svg>
+	        </div>
+	        <input type="text" id="search-navbar" class="block p-2 pl-10 w-full text-gray-900 bg-gray-50 rounded-lg border border-gray-300 sm:text-sm focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Search...">
+	      </div>
+	      <ul class="flex flex-col mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium">
+	        <li>
+	          <a th:href="@{/dashboard}" class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white" aria-current="page">Home</a>
+	        </li>
+	        <li>
+	          <a th:href="@{/stocks}" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Stocks</a>
+	        </li>
+	        <li>
+	          <a th:href="@{/crypto}" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Crypto</a>
+	        </li>
+	      </ul>
+	    </div>
+	  </div>
+	</nav>
+	
   </body>
 </html>
+<!--     <nav class="navbar bg-light"> -->
+<!--         <div class="container"> -->
+<!--           <nav class="navbar navbar-expand-lg bg-light"> -->
+<!--             <div class="container-fluid"> -->
+<!--                 <a class="navbar-brand" th:href="@{/dashboard}"> -->
+<!--                     <img src="https://www.freepnglogos.com/pics/rocket" alt="To The Moon!" width="36" height="24" class="d-inline-block align-text-top">     -->
+<!--                     To The Moon Portfolio Tracker -->
+<!--                 </a> -->
+<!--               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> -->
+<!--                 <span class="navbar-toggler-icon"></span> -->
+<!--               </button> -->
+<!--               <div class="collapse navbar-collapse" id="navbarNav"> -->
+<!--                 <ul class="navbar-nav"> -->
+<!--                   <li class="nav-item"> -->
+<!--                     <a class="nav-link active" aria-current="page" th:href="@{/login}">Log in</a> -->
+<!--                   </li> -->
+<!--                   <li class="nav-item"> -->
+<!--                     <a class="nav-link" th:href="@{/signup}">Create An Account</a> -->
+<!--                   </li> -->
+<!--                 </ul> -->
+<!--               </div> -->
+<!--             </div> -->
+<!--           </nav> -->
+<!--         </div> -->
+<!--       </nav> -->
+<!--       <div class="banner-container"> -->
+<!--       	<div class="banner"> -->
+<!--       	  <img id="cycling-banner" alt="ad banner" src="/images/ad-image-one.jpg" width="600px" height="600px"> -->
+<!--       	</div> -->
+<!--       </div> -->
