--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -11,8 +11,7 @@
 	  <nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-gray-900">
 	  <div class="container flex flex-wrap justify-between items-center mx-auto">
 	  <a th:href="@{/dashboard}" class="flex items-center">
-	      <img src="/docs/images/logo.svg" class="mr-3 h-6 sm:h-9" alt="Flowbite Logo" />
-	      <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
+	      <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">TTM Portfolio Tracker</span>
 	  </a>
 	  <div class="flex md:order-2">
 	    <button type="button" data-collapse-toggle="navbar-search" aria-controls="navbar-search" aria-expanded="false" class="md:hidden text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5 mr-1" >
