--- a/src/main/resources/static/css/signup.css
+++ b/src/main/resources/static/css/signup.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url(/images/dogecoin-bg.jpg);
+	background-image: url(/images/rocket-background.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 }
