--- a/src/main/resources/static/css/dashboard.css
+++ b/src/main/resources/static/css/dashboard.css
@@ -1,7 +1,7 @@
 .banner{
     background-image: url(/images/banner-image.jpg);
 	background-repeat: no-repeat;
-	background-size: cover;
+	background-size: 100%;
 	height: 600px;
 	display:flex;
 	flex-direction: column;
@@ -19,5 +19,11 @@
 .search{
 	font-size: 45px;
 	font-family: "Audiowide", sans-serif;
+	color: white;
+}
+
+.instructions {
+	font-family: "Audiowide", sans-serif;
+	font-size: 30px;
 	color: white;
 }
