--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -95,7 +95,7 @@
 					</div>
 					<div class="relative w-96">
 					
-						<input th:type="search"  id="search-dropdown"
+						<input th:field="${search.searchString}" type="search"  id="search-dropdown"
 							class="block p-2.5 w-full z-20 text-sm text-gray-900 bg-gray-50 rounded-r-lg border-l-gray-50 border-l-2 border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-l-gray-700  dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:border-blue-500"
 							placeholder="Search by Name" required>
 						<button id="search" type="submit"
