--- a/src/main/resources/templates/crypto_chart.html
+++ b/src/main/resources/templates/crypto_chart.html
@@ -50,7 +50,7 @@
 					<li><a th:href="@{/dashboard}"
 						class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white"
 						aria-current="page">Home</a></li>
-					<li><a th:href="@{/dashboard/myPortfolio/{userId}/stocks(userId=${user.user_id})}"
+					<li><a th:href="@{{userId}/myportfolio/stocks(userId=${user.user_id})}"
 						class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">My
 							Stocks</a></li>
 					<li><a th:href="@{{userId}/myportfolio/crypto(userId=${user.user_id})}"
@@ -64,38 +64,47 @@
 		</div>
 	</nav>
 	<div class="flex flex-auto justify-center items-center">
-		<form th:action="@{/{userId}/{stockName}/saveStock(userId = ${user.user_id}, stockName = ${stock.name})}" method="POST">
+		<form th:action="@{/{userId}/{cryptoName}/saveCrypto(userId = ${user.user_id}, cryptoName = ${crypto.name})}" method="POST">
 	    	<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
 	    	<button type="submit" class="text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 ">Save To My Portfolio</button>
 		</form>
 	</div>
 	<div>
-		<input type="hidden" id="stock-asset" value='${stock.symbol}'/>
-		<input type="hidden" id="stock-asset" value='${stock.name}'/>
+		<input type="hidden" id="stock-asset" value='${crypto.symbol}'/>
+		<input type="hidden" id="stock-asset" value='${crypto.name}'/>
 		<div id="container"></div>
 	</div>
 	<script src="https://unpkg.com/flowbite@1.5.2/dist/flowbite.js"></script>
 	<script th:inline="javascript">
 
 	//transforms map of data to array of arrays to be consumed by anychart.js api
-function dataMapToArray(stockInfo) {
+function dataMapToArray(cryptoInfo) {
 	let arrayOfDataArrays = [];	
 	
 	//map keys
-	let stockDataKeys = Object.keys(stockInfo);
+	let cryptoDataKeys = Object.keys(cryptoInfo);
 	
 	//map values = data objects
-	let stockDataObjectValues = Object.values(stockInfo);
+	let cryptoDataObjectValues = Object.values(cryptoInfo);
 
-	for(let i = 0; i < stockDataKeys.length; i++) {
+	for(let i = 0; i < cryptoDataKeys.length; i++) {
 		let dataArray = [];
 		
 		//creates array of data object values
-		let dataPointObject = stockDataObjectValues[i];
+		let dataPointObject = cryptoDataObjectValues[i];
 		let valuesOfDataObject = Object.values(dataPointObject);
 		
+		//remove unnecessary values from data array
+		valuesOfDataObject.splice(1,1);
+		valuesOfDataObject.splice(3,1);
+		valuesOfDataObject.splice(5,1);
+		valuesOfDataObject.splice(7,1);
+		valuesOfDataObject.splice(9,1);
+		valuesOfDataObject.splice(3,1);
+
+
 		//adds key (Date) to first slot for anychart.js api consumption
-		valuesOfDataObject.unshift(stockDataKeys[i]);
+		valuesOfDataObject.unshift(cryptoDataKeys[i]);
 		valuesOfDataObject.pop();
 		dataArray.push(valuesOfDataObject);
 		arrayOfDataArrays.push(dataArray);
@@ -104,17 +113,17 @@ function dataMapToArray(stockInfo) {
 }
 
 //fetches daily stock data for embedded symbol in model and returns a map of the data: keys = dates, values = data objects
-async function getStockData() {
-	let symbol = [[${stock.symbol}]];
+async function getCryptoData() {
+	let symbol = [[${crypto.symbol}]];
 	console.log(symbol);
-	let stockInfo = new Map();
-	let response = await fetch("/fetchDailyData/stock/"+symbol);
-    let stockData = await response.json(); 
-    stockInfo = stockData[`Time Series (Daily)`];
+	let cryptoInfo = new Map();
+	let response = await fetch("/fetchDailyData/crypto/"+symbol);
+    let cryptoData = await response.json(); 
+    cryptoInfo = cryptoData[`Time Series (Digital Currency Daily)`];
     
     //reverses array so oldest date is at index 0
-    let arrayOfDatas = dataMapToArray(stockInfo).reverse();
-    
+    let arrayOfDatas = dataMapToArray(cryptoInfo).reverse();
+    console.log(arrayOfDatas);
     return arrayOfDatas;
 }
 	
@@ -123,7 +132,7 @@ async function getStockData() {
 		
 	anychart.onDocumentReady(function () {
 		
-		getStockData().then(data => {
+		getCryptoData().then(data => {
 
 		    // set the data
 		    table = anychart.data.table();
@@ -149,7 +158,7 @@ async function getStockData() {
 		      plot.yGrid(true).xGrid(true).yMinorGrid(true).xMinorGrid(true);
 
 		      var series = plot.candlestick(mapping)
-		        .name([[${stock.name}]]);
+		        .name([[${crypto.name}]]);
 		      series.legendItem().iconType('rising-falling');
 
 		      // create scroller series with mapped data
@@ -196,7 +205,7 @@ async function getStockData() {
 		      rangeSelector.render(chart);
 		      
 		      // sets the title of the chart
-		      chart.title([[${stock.name}]] + " Chart");
+		      chart.title([[${crypto.name}]] + " Chart");
 		      
 		      // set container id for the chart
 		      chart.container('container');
@@ -210,101 +219,3 @@ async function getStockData() {
 	</script>
 </body>
 </html>
-<!--  
-anychart.onDocumentReady(function () {
-	      getStockData()
-			.then(data => {
-				 // set chart theme
-	      anychart.theme('monochrome');
-	      
-	      // create data table on loaded data
-	      var dataTable = anychart.data.table(0);
-	      dataTable.addData(data);
-
-	      // map loaded data for the candlestick series
-	      var mapping = dataTable.mapAs({
-	        open: 1,
-	        high: 2,
-	        low: 3,
-	        close: 4,
-	        volume: 5
-	      });
-
-	      // create stock chart
-	      var chart = anychart.stock();
-
-	      // create first plot on the chart
-	      var plot = chart.plot(0);
-	      
-	      // set grid settings
-	      plot.yGrid(true).xGrid(true).yMinorGrid(true).xMinorGrid(true);
-
-	     
-	      var series = plot.candlestick(mapping);
-	      series.name([[${stock.name}]]);
-	      series.legendItem().iconType('rising-falling');
-	      
-	       // create EMA indicators with period 50
-	      plot
-	        .ema(dataTable.mapAs({ value: 4 }))
-	        .series()
-	        .stroke('1.5 #455a64');
-	      
-	      // create envelope indicator
-	      chart.plot().env(mapping);
-
-	      
-	       // disable X axis for first plot
-	      plot.xAxis().enabled(false);
-	      
-	       // second plot to show macd values
-	      var macdPlot = chart.plot(1);
-
-	      var macdIndicator = macdPlot.macd(mapping);
-	      // set series type for histogram series.
-	      macdIndicator.histogramSeries('area');
-
-	      macdIndicator
-	        .histogramSeries()
-	        .normal()
-	        .fill('green .3')
-	        .stroke('green');
-	      macdIndicator
-	        .histogramSeries()
-	        .normal()
-	        .negativeFill('red .3')
-	        .negativeStroke('red');
-	    
-	      // set second plot's height
-	      macdPlot.height('40%');
-	      
-
-	      // create scroller series with mapped data
-	      chart.scroller().candlestick(mapping);
-
-	      // set chart selected date/time range
-	      chart.selectRange('2022-08-02', '2022-09-02');
-
-	      // create range picker
-	      var rangePicker = anychart.ui.rangePicker();
-	      
-	      // init range picker
-	      rangePicker.render(chart);
-
-	      // create range selector
-	      var rangeSelector = anychart.ui.rangeSelector();
-	      
-	      // init range selector
-	      rangeSelector.render(chart);
-	      
-	       // sets the title of the chart
-	      chart.title([[${stock.name}]]+ ' Stock Chart');
-	      
-	      // set container id for the chart
-	      chart.container('container');
-	      
-	      // initiate chart drawing
-	      chart.draw();
-			});
-	});
-	-->
