complete charting view, working on save to portfolio bug

--- a/src/main/resources/templates/my_portfolio.html
+++ b/src/main/resources/templates/my_portfolio.html
@@ -124,7 +124,7 @@
 			<tbody>
 				<tr th:each="crypto : ${cryptos}" class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
 					<th scope="row"
-						class="py-4 px-6 font-medium text-gray-900 whitespace-nowrap dark:text-white"><a th:text="${crypto.name}" th:href="@{/dashboard/crypto/chart/{name}(name = ${crypto.name})}"></a></th>
+						class="py-4 px-6 font-medium text-gray-900 whitespace-nowrap dark:text-white"><a th:text="${crypto.name}" th:href="@{/dashboard/chart/{name}(name = ${crypto.name})}"></a></th>
 					<td th:text="${crypto.symbol}" class="py-4 px-6"></td>
 				</tr>
 			</tbody>
