--- a/src/main/resources/templates/crypto_chart.html
+++ b/src/main/resources/templates/crypto_chart.html
@@ -50,10 +50,10 @@
 					<li><a th:href="@{/dashboard}"
 						class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white"
 						aria-current="page">Home</a></li>
-					<li><a th:href="@{{userId}/myportfolio/stocks(userId=${user.user_id})}"
+					<li><a th:href="@{/dashboard/myPortfolio/{userId}/stocks(userId=${user.user_id})}"
 						class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">My
 							Stocks</a></li>
-					<li><a th:href="@{{userId}/myportfolio/crypto(userId=${user.user_id})}"
+					<li><a th:href="@{/dashboard/myPortfolio/{userId}/crypto(userId=${user.user_id})}"
 						class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">My
 							Crypto</a></li>
 					<li><a th:href="@{/logout}"
@@ -63,7 +63,7 @@
 			</div>
 		</div>
 	</nav>
-	<div class="flex flex-auto justify-center items-center">
+	<div th:unless="${lists.contains(userCryptos, ${crypto.symbol})}" class="flex flex-auto justify-center items-center">
 		<form th:action="@{/{userId}/{cryptoName}/saveCrypto(userId = ${user.user_id}, cryptoName = ${crypto.name})}" method="POST">
 	    	<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
 	    	<button type="submit" class="text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 ">Save To My Portfolio</button>
@@ -96,11 +96,15 @@ function dataMapToArray(cryptoInfo) {
 		
 		//remove unnecessary values from data array
 		valuesOfDataObject.splice(1,1);
+		valuesOfDataObject.splice(2,1);
 		valuesOfDataObject.splice(3,1);
-		valuesOfDataObject.splice(5,1);
-		valuesOfDataObject.splice(7,1);
-		valuesOfDataObject.splice(9,1);
-		valuesOfDataObject.splice(3,1);
+		valuesOfDataObject.splice(4,1);
+
+
+
+		
+		
+		
 
 
 		//adds key (Date) to first slot for anychart.js api consumption
@@ -190,7 +194,7 @@ async function getCryptoData() {
               indicatorPlot.height('40%');
 		      
 		      // set chart selected date/time range
-		      chart.selectRange('2018-08-01', '2022-09-02');
+		      chart.selectRange('2022-05-01', '2022-09-02');
 
 		      // create range picker
 		      var rangePicker = anychart.ui.rangePicker();
