--- a/src/main/resources/templates/results.html
+++ b/src/main/resources/templates/results.html
@@ -44,7 +44,7 @@
 					<li><a th:href="@{/dashboard/myPortfolio/{userId}/stocks(userId=${user.user_id})}"
 						class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">My
 							Stocks</a></li>
-					<li><a th:href="@{{userId}/myportfolio/crypto(userId=${user.user_id})}"
+					<li><a th:href="@{/dashboard/myPortfolio/{userId}/crypto(userId=${user.user_id})}"
 						class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">My
 							Crypto</a></li>
 					<li><a th:href="@{/logout}"
