--- a/src/main/resources/templates/stock_chart.html
+++ b/src/main/resources/templates/stock_chart.html
@@ -63,7 +63,7 @@
 			</div>
 		</div>
 	</nav>
-	<div class="flex flex-auto justify-center items-center">
+	<div th:unless="${lists.contains(userStocks, stock.symbol)}" class="flex flex-auto justify-center items-center">
 		<form th:action="@{/{userId}/{stockName}/saveStock(userId = ${user.user_id}, stockName = ${stock.name})}" method="POST">
 	    	<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
 	    	<button type="submit" class="text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 ">Save To My Portfolio</button>
