--- a/src/main/resources/templates/crypto_chart.html
+++ b/src/main/resources/templates/crypto_chart.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>To The Moon</title>
+<title>To The Moon Chart</title>
 	<link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.2/dist/flowbite.min.css" />
 	<script src="https://cdn.anychart.com/releases/8.11.0/js/anychart-core.min.js"></script>
     <script src="https://cdn.anychart.com/releases/8.11.0/js/anychart-stock.min.js"></script>
@@ -63,7 +63,7 @@
 			</div>
 		</div>
 	</nav>
-	<div th:unless="${lists.contains(userCryptos, ${crypto.symbol})}" class="flex flex-auto justify-center items-center">
+	<div th:unless="${#lists.contains(userCryptos, crypto.symbol)}" class="flex flex-auto justify-center items-center">
 		<form th:action="@{/{userId}/{cryptoName}/saveCrypto(userId = ${user.user_id}, cryptoName = ${crypto.name})}" method="POST">
 	    	<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
 	    	<button type="submit" class="text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 ">Save To My Portfolio</button>
