fixed bug crypto portfolio selection bug

--- a/src/main/resources/templates/stock_chart.html
+++ b/src/main/resources/templates/stock_chart.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>To The Moon</title>
+<title>To The Moon Chart</title>
 	<link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.2/dist/flowbite.min.css" />
 	<script src="https://cdn.anychart.com/releases/8.11.0/js/anychart-core.min.js"></script>
     <script src="https://cdn.anychart.com/releases/8.11.0/js/anychart-stock.min.js"></script>
