--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,7 +2,7 @@
 <html xmlns:th=http://thymeleaf.org class="h-full bg-gray-50">
 <head>
 <meta charset="UTF-8">
-<title>Dashboard</title>
+<title>Log-In</title>
 <link rel="stylesheet" href="/css/log-in.css">
  <script src="https://cdn.tailwindcss.com"></script>
   <script>
