--- a/src/main/resources/templates/results.html
+++ b/src/main/resources/templates/results.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>To The Moon</title>
+<title>Results</title>
 <link rel="stylesheet"
 	href="https://unpkg.com/flowbite@1.5.2/dist/flowbite.min.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
